--- a/addition/css/main.css
+++ b/addition/css/main.css
@@ -477,13 +477,15 @@ p.footer__social-icons a:hover {
 div.scrollup {
     position: fixed; /* фиксированная позиция */
     color: #fff; /* цвет текста */
-    background-color: #286090; /* цвет заднего фона */
+    background-color: #2d7788; /* цвет заднего фона */
     right: 20px; /* расстояние от правого края */
-    bottom: 0px; /* расстояние от нижнего края */
-    padding: 4px 10px; /* отступы до содержимого блока */
-    font-size: 20px; /* размер шрифта (иконки) */
-    border-top-left-radius: 4px; /* скругление верхнего левого угла */
-    border-top-right-radius: 4px; /* скругление верхнего правого угла */
+    bottom: 20px; /* расстояние от нижнего края */
+    padding: 4px 8px; /* отступы до содержимого блока */
+    font-size: 14px; /* размер шрифта (иконки) */
+    border-top-left-radius: 6px; /* скругление верхнего левого угла */
+    border-top-right-radius: 6px; /* скругление верхнего правого угла */
+    border-bottom-left-radius: 6px; /* скругление нижнего левого угла */
+    border-bottom-right-radius: 6px; /* скругление нижнего правого угла */
     cursor: pointer; /* форма курсора */
     display: none; /* не отображать элемент */
     text-align: center; /*выравнивание содержимого элемента по центру */
