--- a/travel/style.css
+++ b/travel/style.css
@@ -19,7 +19,7 @@ Header Area starts
 
 .mobile-app-banner{
     
-    background-image: url(img/slider9.jpg.png);
+    background-image: url(img/slider9_3.png);
     background-size: cover;
     background-position: center;
     height: 800px;
