--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -319,6 +319,7 @@ body {
 .footer-inner {
     font-size: 14px;
     text-align: center;
+    z-index: 2; /* Выше */
 }
 
 .footer-inner p+p {
@@ -391,4 +392,5 @@ body {
 
 .inner-page-backlink:hover {
     background-color: #dedede;
+
 }
