--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -97,7 +97,7 @@ body {
 }
 
 .nav-link:hover {
-    color: #8C30F5;
+    color: ##b7b5b9;
 }
 
 .nav-link:last-child {
@@ -393,4 +393,5 @@ body {
     background-color: #dedede;
 
 }
+
 
