--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -97,7 +97,7 @@ body {
 }
 
 .nav-link:hover {
-    color: ##b7b5b9;
+    color: #b7b5b9;
 }
 
 .nav-link:last-child {
@@ -393,5 +393,6 @@ body {
     background-color: #dedede;
 
 }
+
 
 
