--- a/addition/css/main.css
+++ b/addition/css/main.css
@@ -212,6 +212,11 @@ a {
     margin-bottom: 17px;
 }
 
+.portfolio-item__img: hover {
+
+    opacity o.7
+}
+
 .portfolio-item__title {
 
     font-size: 24px;
