--- a/addition/css/main.css
+++ b/addition/css/main.css
@@ -212,9 +212,9 @@ a {
     margin-bottom: 17px;
 }
 
-.portfolio-item__img: hover {
-
-    opacity o.7
+.portfolio-item__img:hover {
+   /* прозрачность */
+    opacity: 0.7;
 }
 
 .portfolio-item__title {
