--- a/addition/css/main.css
+++ b/addition/css/main.css
@@ -212,7 +212,7 @@ a {
     margin-bottom: 17px;
 }
 
-.portfolio-item__img:hover {
+.portfolio_img:hover {
    /* прозрачность */
     opacity: 0.5;
 }
