--- a/shares/css/styles.css
+++ b/shares/css/styles.css
@@ -5,7 +5,8 @@ body {
   font-family: 'Roboto', sans-serif;
   /* font-family: 'Open Sans', sans-serif; */
   color: #545E6C;
-  background: #f5f5f5;
+  /* background: #f5f5f5; */
+  background: #d3dbe2;
   font-size: 14px;
   padding: 30px;
   -webkit-font-smoothing: antialiased;
