--- a/shares/css/styles.css
+++ b/shares/css/styles.css
@@ -217,7 +217,7 @@ img {
   margin-bottom: 0;
 }
 .main-wrapper {
-  background: #b9b9bf;
+  background: #e3e6e6;
   padding: 60px;
   padding-right: 300px;
 }
