--- a/addition/css/main.css
+++ b/addition/css/main.css
@@ -3,6 +3,7 @@ html, body {
     font-size: 16px;
     line-height: 1.5;
     /*background: blue;*/
+    background: #d3dbe2;
 }
 /*
 font-family: 'Merriweather', serif;
