--- a/addition/css/main.css
+++ b/addition/css/main.css
@@ -190,6 +190,7 @@ a {
     ....................................*/
 .portfolio {
     background: #fff;
+    background: #d3dbe2;
     padding-top: 70px; /* Внутренний отступ сверху */
     padding-bottom: 100px; /* Внутренний отступ снизу */
 }
