--- a/travel/style.css
+++ b/travel/style.css
@@ -8,7 +8,7 @@
 body{    
     font-family: 'Roboto Condensed', sans-serif;
     overflow-x: hidden;
-    background: #d3dbe2;
+    /* background: #d3dbe2; */
     background: #f5f5f5;
     
 }
