--- a/travel/style.css
+++ b/travel/style.css
@@ -1485,7 +1485,7 @@ footer .social .fa{
 }
 
 footer .social .fa:hover{
-    background: #51f0f2; 
+    background: #448586; 
     <!--  background: #ff1053; -->
 }
 
